--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
 </head>
 <body>
 <h1>City Bike Locator</h1>
+<div class="row">
 <div id="location-display">
 <p id="message"></p>
 <p id="nearest-station"></p>
+</div>
+<div id='map'>
+<iframe id="map-frame" width="600" height="450" frameborder="0" style="border:0"
+    src=""
+    allowfullscreen></iframe>
+
+
+</div>
 </div>
 <h2>Other stations</h2>
 <ul id="station-list"></ul>
