--- a/index.html
+++ b/index.html
@@ -8,50 +8,30 @@
 </head>
 
 <body>
-<<<<<<< HEAD
 <h1>City Bike Locator</h1>
 <div class="row">
+<div class="column">
 <div id="location-display">
 <p id="message"></p>
 <p id="nearest-station"></p>
 </div>
-<div id='map'>
-<iframe id="map-frame" width="600" height="450" frameborder="0" style="border:0"
+<h2>Other stations near you</h2>
+<ul id="station-list"></ul>
+</div>
+<div id='map' class="column">
+<iframe id="map-frame" width="500" height="450" frameborder="0" 
     src=""
     allowfullscreen></iframe>
 
 
 </div>
 </div>
-<h2>Other stations</h2>
-<ul id="station-list"></ul>
+
   
 
 <script src="src/functions.js"></script>
 <script src="src/requests.js"></script>
 <script src="src/app.js"></script>
-=======
-    <h1>City Bike Locator</h1>
-    <div class="row">
-        <div id="location-display">
-            <p id="message"></p>
-            <p id="nearest-station"></p>
-        </div>
-        <div id='map'>
-            <iframe id="map-frame" width="600" height="450" frameborder="0" style="border:0" src=""
-                allowfullscreen></iframe>
-
-
-        </div>
-    </div>
-    <h2>Other stations</h2>
-    <ul id="station-list"></ul>
-
-
-    <script src="src/functions.js"></script>
-    <script src="src/requests.js"></script>
-    <script src="src/app.js"></script>
->>>>>>> show_nearest_stations
 </body>
 
 </html>
