--- a/index.html
+++ b/index.html
@@ -2,21 +2,25 @@
 <html>
 
 <head>
-    <title>City Bike Locator</title>
+    <title>Find a City Bike Station</title>
     <link rel="stylesheet" type="text/css" href="/public/styles.css">
+    <script src="https://kit.fontawesome.com/c51fd8968b.js" crossorigin="anonymous"></script>
+
 
 </head>
 
 <body>
-<h1>City Bike Locator</h1>
+<h1>Find a City Bike Station</h1>
 <div class="row">
 <div class="column">
 <div id="location-display">
 <p id="message"></p>
 <p id="nearest-station"></p>
 </div>
+<div id="other-stations">
 <h2>Other stations near you</h2>
 <ul id="station-list"></ul>
+</div>
 </div>
 <div id='map' class="column">
 <iframe id="map-frame" width="500" height="450" frameborder="0" 
