--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,15 @@
 
 <head>
     <title>Find a City Bike Station</title>
+     <!-- Required meta tags -->
+     <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+     <!-- Styles -->
     <link rel="stylesheet" type="text/css" href="./styles.css">
+   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+   -->
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css' rel='stylesheet' />
     <script src="https://kit.fontawesome.com/c51fd8968b.js" crossorigin="anonymous"></script>
 
@@ -25,7 +33,8 @@
 <ul id="station-list"></ul>
 </div>
 </div>
-<div id="mapbox" class="column"></div>
+<div class="column">
+    <div id="mapbox" class=""></div>
 
 
 </div>
