--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 <ul id="station-list"></ul>
 </div>
 </div>
-<div class="column">
+<div class="column" id="map-container">
     <div id="mapbox" class=""></div>
 
 
