--- a/public/index.html
+++ b/public/index.html
@@ -21,22 +21,35 @@
 
 <body onload="onPageLoad()">
 <h1>Find a City Bike Station</h1>
-<div class="row">
-<div class="column">
-<div id="location-display">
-<p id="message"></p>
-<p id="nearest-station"></p>
-</div>
+<div>
+   
+ <div id="location-display">
+            <div class="container"> 
+              <button class="locate" id="locate-me">Get my location</button>
+              </div>
+              <div class="row">
+     <div class="column hide" id="message">
+         <i class="icon fas fa-map-marker-alt"></i> <b>Your current location:</b>&nbsp; <span id="current-location-text"></span>
+     </div>
+     <div class="column hide" id="nearest-station">
+    <i class="icon fas fa-bicycle"></i> <b>Your nearest station:</b>&nbsp; <span id="nearest-station-text"></span>
+     </div>
+     </div>
+ </div>
+ 
+<div class="row" id="main">
+<div class="column hide" id="other-stations-container">
 <div id="loader" style="display:block"></div>
-<div class="animate-load" id="other-stations" style="display:none;">
-<h2>Other stations near you</h2>
+<div id="other-stations">
+<h2 id="other-stations-title">Other stations near you</h2>
 <ul id="station-list"></ul>
 </div>
 </div>
 <div class="column" id="map-container">
-    <div id="mapbox" class=""></div>
+    <div id="mapbox"></div>
 
 
+</div>
 </div>
 
   <script>
