--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 <h1>Find a City Bike Station</h1>
 <div>
    
- <div id="location-display">
+ <div class="hide" id="location-display">
             <div class="container"> 
               <button class="locate" id="locate-me">Get my location</button>
               </div>
