Load environmental variables

--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,11 @@
 
 </head>
 
-<body onload="onPageLoad()">
 <h1>Find a City Bike Station</h1>
 <div>
    
  <div class="hide" id="location-display">
             <div class="container"> 
-              <button class="locate" id="locate-me">Get my location</button>
               </div>
               <div class="row">
      <div class="column hide" id="message">
@@ -53,14 +51,14 @@
 </div>
 
   <script>
-    function onPageLoad() {
-        setTimeout(showPage, 3000);
-    }
+    // function onPageLoad() {
+    //     setTimeout(showPage, 3000);
+    // }
 
-    function showPage() {
-        document.getElementById("loader").style.display = "none";
-        document.getElementById("other-stations").style.display = "block";
-    }
+    // function showPage() {
+    //     document.getElementById("loader").style.display = "none";
+    //     document.getElementById("other-stations").style.display = "block";
+    // }
 </script>
 
 
