--- a/public/index.html
+++ b/public/index.html
@@ -35,14 +35,14 @@
 
     <div class="row" id="main">
         <div class="column hide" id="other-stations-container">
-            <div id="loader" style="display:block"></div>
             <div id="other-stations">
                 <h2 id="other-stations-title">Other stations near you</h2>
                 <ul id="station-list"></ul>
             </div>
         </div>
         <div class="column" id="map-container">
-            <div id="mapbox"></div>
+         <<div class="isLoading""></div> 
+            <div class="hide" id="mapbox"></div>
 
 
         </div>
