--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="column" id="map-container">
-         <<div class="isLoading""></div> 
+         <div class="isLoading""></div> 
             <div class="hide" id="mapbox"></div>
 
 
